# plix

./: .gitignore  CHANGELOG  Cargo.toml  LICENSE  README.md  VISION.md
benchmarks/: lexer_benchmark.rs
examples/: Full.px  adt.px  advanced_features.px  arrow_only_test.px  basic.px  complete_syntax_demo.px  complex_test.px  data_structures_algorithms.px  debug_lexer.px  error_handling.px  full_syntax_demo.px  function_test.px  functional_programming.px  minimal_test.px  object_oriented.px  simple_enum_test.px  smart_mut_alias.px  smart_mut_basic.px  smart_mut_conflict.px  smart_mut_function.px  smart_mut_struct.px  test.px  test_enum.px  working_test.px
src/: lib.rs  main.rs
src/codegen/: bytecode.rs  ir.rs  machine_code.rs  mod.rs
src/lexer/: lexer.rs  mod.rs  token.rs
src/optimizer/: constant_folding.rs  loop_optimization.rs  mod.rs  tree_shaking.rs
src/parser/: ast.rs  ast_with_span.rs  mod.rs  parser.rs
src/typechecker/: mod.rs  scope.rs  smart_mutability.rs  type_checker.rs  types.rs  use_def.rs
src/utils/: error.rs  position.rs
src/vm/: bytecode.rs  garbage_collector.rs  mod.rs  runtime.rs  value.rs
