[package]
name = "plix-compiler"
version = "0.1.0"
edition = "2021"
description = "A modern programming language compiler combining Python simplicity with Rust performance"
authors = ["Plix Team"]
license = "MIT"

[dependencies]
logos = "0.13"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"

[dev-dependencies]
rstest = "0.18"
pretty_assertions = "1.0"
criterion = "0.5"